--- a/src/form.html
+++ b/src/form.html
@@ -653,10 +653,7 @@
                 </div>
                 <div class="socials">
                     <a href="#" class="socials__item socials__item--fb"></a>
-                    <a href="#" class="socials__item socials__item--tw"></a>
-                      <!--   <a href="#" class="socials__item socials__item--youtube"></a>
-                        <a href="#" class="socials__item socials__item--google"></a>
-                        <a href="#" class="socials__item socials__item--inst"></a> -->
+                    <a href="#" class="socials__item socials__item--youtube"></a>
                 </div>
                 <a href="#" class="logo logo--footer">Хендай</a>
                 <span class="copyright">
@@ -696,7 +693,7 @@
                     <a href="#" class="share-list__link share-list__link--fb">facebook</a>
                 </div>
                 <div class="share-list__item">
-                    <a href="#" class="share-list__link share-list__link--tw">twitter</a>
+                    <a href="#" class="share-list__link share-list__link--youtube">youtube</a>
                 </div>
             </div>
         </div>
