Изменяет теги ссылок в на детальной новостей

--- a/src/news-detail.html
+++ b/src/news-detail.html
@@ -676,9 +676,9 @@
                         <div class="about-news__row">
                             <div class="about-news__title"><strong>Тег</strong></div>
                             <div class="about-news__content">
-                                <a href="#" class="about-news__link">
-                                    <span>Lacma</span>
-                                </a>
+                                <a href="#" class="about-news__link"><span>Lacma</span>,</a>
+                                <a href="#" class="about-news__link"><span>Lacma2</span>,</a>
+                                <a href="#" class="about-news__link"><span>Lacma3</span></a>
                             </div>
                         </div>
                         <div class="about-news__row about-news__row--rowspan">
