делает страницу списка авто

--- a/src/auto-list.html
+++ b/src/auto-list.html
@@ -27,7 +27,7 @@
 
 <body>
     <!--LAYOUT-->
-    <div class="layout layout--news-list">
+    <div class="layout layout--auto-list">
         <div class="page-wrapper">
             <header class="page-header">
                 <div class="page-container">
@@ -558,14 +558,111 @@
                 </div>
                 <div class="headline-block" style="background:rgba(100%,100%,100%,0.7)">
                     <div class="headline-block__wrap">
-                        <h1>DePress Releases</h1>
+                        <h1>Список авто</h1>
                     </div>
                 </div>
             </div>
             <main class="page-content workarea">
                 <!-- CONTENT-PART -->
                 <div class="page-container">
-                    1
+                    <section class="auto-list row">
+                        <article class="trade-in col-lg-6">
+                            <a class="trade-in__img" href="#" style="background: url(assets/img/content/tradein-h1.jpg)">
+                                <div class="trade-in__price">42 716 <sup>byn</sup></div>
+                            </a>
+                            <div class="trade-in__characteristics">
+                                <h3 class="trade-in__title">
+                                    <a href="#" class="trade-in__title-link">
+                                        Hyundai H-1(Starex)
+                                    </a>
+                                </h3>
+                                <ul class="trade-in__characteristics-list">
+                                    <li class="trade-in__characteristics-item"><span>Пробег:</span> 67000 км</li>
+                                    <li class="trade-in__characteristics-item"><span>Год:</span> 2012</li>
+                                    <li class="trade-in__characteristics-item"><span>Город:</span> Минск</li>
+                                    <li class="trade-in__characteristics-item"><span>Тип двигателя:</span> Дизель</li>
+                                    <li class="trade-in__characteristics-item"><span>Цвет:</span> Серый</li>
+                                    <li class="trade-in__characteristics-item"><span>Объем двигателя:</span> 2500 см3</li>
+                                    <li class="trade-in__characteristics-item"><span>КПП:</span> Автоматическая</li>
+                                </ul>
+                                <div class="trade-in__phone">
+                                    <span>Телефон:</span> <a href="tel:375(33)3777448">+375 (33) 377 7448 (МТС)</a>, <a href="tel:375(29)6660989">+375 (29) 666 0989 (VEL)</a>
+                                </div>
+                            </div>
+                        </article>
+                        <article class="trade-in col-lg-6">
+                            <a class="trade-in__img" href="#" style="background: url(assets/img/content/tradein-h1.jpg)">
+                                <div class="trade-in__price">42 716 <sup>byn</sup></div>
+                            </a>
+                            <div class="trade-in__characteristics">
+                                <h3 class="trade-in__title">
+                                    <a href="#" class="trade-in__title-link">
+                                        Hyundai H-2
+                                    </a>
+                                </h3>
+                                <ul class="trade-in__characteristics-list">
+                                    <li class="trade-in__characteristics-item"><span>Пробег:</span> 67000 км</li>
+                                    <li class="trade-in__characteristics-item"><span>Год:</span> 2012</li>
+                                    <li class="trade-in__characteristics-item"><span>Город:</span> Минск</li>
+                                    <li class="trade-in__characteristics-item"><span>Тип двигателя:</span> Дизель</li>
+                                    <li class="trade-in__characteristics-item"><span>Цвет:</span> Серый</li>
+                                    <li class="trade-in__characteristics-item"><span>Объем двигателя:</span> 2500 см3</li>
+                                    <li class="trade-in__characteristics-item"><span>КПП:</span> Автоматическая</li>
+                                </ul>
+                                <div class="trade-in__phone">
+                                    <span>Телефон:</span> <a href="tel:375(33)3777448">+375 (33) 377 7448 (МТС)</a>, <a href="tel:375(29)6660989">+375 (29) 666 0989 (VEL)</a>
+                                </div>
+                            </div>
+                        </article>
+                        <article class="trade-in col-lg-6">
+                            <a class="trade-in__img" href="#" style="background: url(assets/img/content/tradein-h1.jpg)">
+                                <div class="trade-in__price">42 716 <sup>byn</sup></div>
+                            </a>
+                            <div class="trade-in__characteristics">
+                                <h3 class="trade-in__title">
+                                    <a href="#" class="trade-in__title-link">
+                                        Hyundai H-3
+                                    </a>
+                                </h3>
+                                <ul class="trade-in__characteristics-list">
+                                    <li class="trade-in__characteristics-item"><span>Пробег:</span> 67000 км</li>
+                                    <li class="trade-in__characteristics-item"><span>Год:</span> 2012</li>
+                                    <li class="trade-in__characteristics-item"><span>Город:</span> Минск</li>
+                                    <li class="trade-in__characteristics-item"><span>Тип двигателя:</span> Дизель</li>
+                                    <li class="trade-in__characteristics-item"><span>Цвет:</span> Серый</li>
+                                    <li class="trade-in__characteristics-item"><span>Объем двигателя:</span> 2500 см3</li>
+                                    <li class="trade-in__characteristics-item"><span>КПП:</span> Автоматическая</li>
+                                </ul>
+                                <div class="trade-in__phone">
+                                    <span>Телефон:</span> <a href="tel:375(33)3777448">+375 (33) 377 7448 (МТС)</a>, <a href="tel:375(29)6660989">+375 (29) 666 0989 (VEL)</a>
+                                </div>
+                            </div>
+                        </article>
+                        <article class="trade-in col-lg-6">
+                            <a class="trade-in__img" href="#" style="background: url(assets/img/content/tradein-h1.jpg)">
+                                <div class="trade-in__price">42 716 <sup>byn</sup></div>
+                            </a>
+                            <div class="trade-in__characteristics">
+                                <h3 class="trade-in__title">
+                                    <a href="#" class="trade-in__title-link">
+                                        Hyundai H-3
+                                    </a>
+                                </h3>
+                                <ul class="trade-in__characteristics-list">
+                                    <li class="trade-in__characteristics-item"><span>Пробег:</span> 67000 км</li>
+                                    <li class="trade-in__characteristics-item"><span>Год:</span> 2012</li>
+                                    <li class="trade-in__characteristics-item"><span>Город:</span> Минск</li>
+                                    <li class="trade-in__characteristics-item"><span>Тип двигателя:</span> Дизель</li>
+                                    <li class="trade-in__characteristics-item"><span>Цвет:</span> Серый</li>
+                                    <li class="trade-in__characteristics-item"><span>Объем двигателя:</span> 2500 см3</li>
+                                    <li class="trade-in__characteristics-item"><span>КПП:</span> Автоматическая</li>
+                                </ul>
+                                <div class="trade-in__phone">
+                                    <span>Телефон:</span> <a href="tel:375(33)3777448">+375 (33) 377 7448 (МТС)</a>, <a href="tel:375(29)6660989">+375 (29) 666 0989 (VEL)</a>
+                                </div>
+                            </div>
+                        </article>
+                    </section>
                 </div>
                 <!--end CONTENT-PART -->
             </main>
