Делает правки по страницам авто и списка авто

--- a/src/auto.html
+++ b/src/auto.html
@@ -27,7 +27,7 @@
 
 <body>
     <!--LAYOUT-->
-    <div class="layout layout--auto-list">
+    <div class="layout layout--auto">
         <div class="page-wrapper">
             <header class="page-header">
                 <div class="page-container">
@@ -540,7 +540,7 @@
                     </div>
                 </div>
             </header>
-            <div class="page-top page-top--center" style="background: url('assets/img/content/function-kv-stg-pc.jpg')">
+            <div class="page-top">
                 <div class="page-top__row">
                     <div class="breadcrumbs">
                         <div class="breadcrumbs__wrap">
@@ -552,13 +552,21 @@
                     </div>
                     <div class="sharing">
                         <a href="#">
-                            Page sharing
-                        </a>
+                        Page sharing
+                    </a>
                     </div>
                 </div>
-                <div class="headline-block" style="background:rgba(100%,100%,100%,0.7)">
-                    <div class="headline-block__wrap">
-                        <h1>Список авто</h1>
+                <div class="release-block">
+                    <div class="release-block__wrap">
+                        <div class="release-block__type">
+                            Выпуск
+                        </div>
+                        <div class="release-block__data">
+                            <div class="release-block__date">2017.02.20</div>
+                            <div class="release-block__time">18:10:00</div>
+                            <div class="release-block__number">No. 6653</div>
+                        </div>
+                        <h1>Авто Hyundai H-1(Starex)</h1>
                     </div>
                 </div>
             </div>
@@ -571,11 +579,6 @@
                                 <div class="trade-in__price">42 716 <sup>byn</sup></div>
                             </a>
                             <div class="trade-in__characteristics">
-                                <h3 class="trade-in__title">
-                                    <a href="#" class="trade-in__title-link">
-                                        Hyundai H-1(Starex)
-                                    </a>
-                                    </h3>
                                 <div class="trade-in__characteristics-list">
                                     <div class="trade-in__characteristics-column">
                                         <div class="trade-in__characteristics-item"><span>Пробег:</span> 67000 км</div>
@@ -594,37 +597,59 @@
                                 </div>
                             </div>
                         </div>
+                        <p class="trade-in__desc">
+                            Максимальная комплектация. Два люка, кожаный салон трансформер, 9-ть мест, вентиляция водительского сидения, Система ESP, блокировка дифференциала, 2012 г. в. по техпаспорту.
+                        </p>
                     </article>
-                    <article class="trade-in">
-                        <div class="trade-in__wrap">
-                            <a class="trade-in__img" href="#" style="background: url(assets/img/content/tradein-h1.jpg)">
-                                <div class="trade-in__price">42 716 <sup>byn</sup></div>
-                            </a>
-                            <div class="trade-in__characteristics">
-                                <h3 class="trade-in__title">
-                                    <a href="#" class="trade-in__title-link">
-                                        Hyundai H-2(Starex)
-                                    </a>
-                                    </h3>
-                                <div class="trade-in__characteristics-list">
-                                    <div class="trade-in__characteristics-column">
-                                        <div class="trade-in__characteristics-item"><span>Пробег:</span> 67000 км</div>
-                                        <div class="trade-in__characteristics-item"><span>Год:</span> 2012</div>
-                                        <div class="trade-in__characteristics-item"><span>Город:</span> Минск</div>
-                                        <div class="trade-in__characteristics-item"><span>Тип двигателя:</span> Дизель</div>
-                                        <div class="trade-in__characteristics-item"><span>Цвет:</span> Серый</div>
-                                    </div>
-                                    <div class="trade-in__characteristics-column">
-                                        <div class="trade-in__characteristics-item"><span>Объем двигателя:</span> 2500 см3</div>
-                                        <div class="trade-in__characteristics-item"><span>КПП:</span> Автоматическая</div>
-                                    </div>
-                                </div>
-                                <div class="trade-in__phone">
-                                    <span>Телефон:</span> <a href="tel:375(33)3777448">+375 (33) 377 7448 (МТС)</a>, <a href="tel:375(29)6660989">+375 (29) 666 0989 (VEL)</a>
-                                </div>
-                            </div>
-                        </div>
-                    </article>
+                    <section class="auto-slider">
+                        <a href="assets/img/content/trade-auto-big-1.jpg" class="auto-slider__item">
+                            <span class="auto-slider__thumb" style="background: url('assets/img/content/trade-auto-big-1.jpg')">  
+                            </span>
+                        </a>
+                        <a href="assets/img/content/trade-auto-big-2.jpg" class="auto-slider__item">
+                            <span class="auto-slider__thumb" style="background: url('assets/img/content/trade-auto-big-2.jpg')">  
+                            </span>
+                        </a>
+                        <a href="assets/img/content/trade-auto-big-3.jpg" class="auto-slider__item">
+                            <span class="auto-slider__thumb" style="background: url('assets/img/content/trade-auto-big-3.jpg')">  
+                            </span>
+                        </a>
+                        <a href="assets/img/content/trade-auto-big-4.jpg" class="auto-slider__item">
+                            <span class="auto-slider__thumb" style="background: url('assets/img/content/trade-auto-big-4.jpg')">  
+                            </span>
+                        </a>
+                        <a href="assets/img/content/trade-auto-big-5.jpg" class="auto-slider__item">
+                            <span class="auto-slider__thumb" style="background: url('assets/img/content/trade-auto-big-5.jpg')">  
+                            </span>
+                        </a>
+                        <a href="assets/img/content/trade-auto-big-6.jpg" class="auto-slider__item">
+                            <span class="auto-slider__thumb" style="background: url('assets/img/content/trade-auto-big-6.jpg')">  
+                            </span>
+                        </a>
+                        <a href="assets/img/content/trade-auto-big-7.jpg" class="auto-slider__item">
+                            <span class="auto-slider__thumb" style="background: url('assets/img/content/trade-auto-big-7.jpg')">  
+                            </span>
+                        </a>
+                        <a href="assets/img/content/trade-auto-big-8.jpg" class="auto-slider__item">
+                            <span class="auto-slider__thumb" style="background: url('assets/img/content/trade-auto-big-8.jpg')">  
+                            </span>
+                        </a>
+                        <a href="assets/img/content/trade-auto-big-9.jpg" class="auto-slider__item">
+                            <span class="auto-slider__thumb" style="background: url('assets/img/content/trade-auto-big-9.jpg')">  
+                            </span>
+                        </a>
+                        <a href="assets/img/content/trade-auto-big-10.jpg" class="auto-slider__item">
+                            <span class="auto-slider__thumb" style="background: url('assets/img/content/trade-auto-big-10.jpg')">  
+                            </span>
+                        </a>
+                        <a href="assets/img/content/trade-auto-big-11.jpg" class="auto-slider__item">
+                            <span class="auto-slider__thumb" style="background: url('assets/img/content/trade-auto-big-11.jpg')">  
+                            </span>
+                        </a>
+                    </section>
+                    <section class="btn-section btn-section--center">
+                        <a href="#" class="btn">Оценить авто</a>
+                    </section>
                 </div>
                 <!--end CONTENT-PART -->
             </main>
@@ -695,6 +720,8 @@
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
     <script src="js/vendor/jquery.formstyler.min.js"></script>
     <script src="js/vendor/slick.min.js"></script>
+    <script src="js/vendor/lightgallery.min.js"></script>
+    <script src="js/vendor/lg-fullscreen.min.js"></script>
     <script src="js/interface.js"></script>
 </body>
 
