Делает табы со слайдером

--- a/src/models.html
+++ b/src/models.html
@@ -608,79 +608,177 @@
                         <div class="exterior__pic" style="background: url('assets/img/content/creta-design.jpg')">
                         </div>
                     </section>
+                    <section class="promo-block">
+                        <div class="promo-tabs">
+                            <div class="promo-tabs__mobile-controls">
+                                Быстрее
+                            </div>
+                            <ul class="promo-tabs__controls">
+                                <li class="promo-tabs__controls-item active" data-class="first">
+                                    <a href="#" class="promo-tabs__controls-link">
+                                        Быстрее
+                                    </a>
+                                </li>
+                                <li class="promo-tabs__controls-item" data-class="second">
+                                    <a href="#" class="promo-tabs__controls-link">
+                                        Выше
+                                    </a>
+                                </li>
+                                <li class="promo-tabs__controls-item" data-class="third">
+                                    <a href="#" class="promo-tabs__controls-link">
+                                        Храбрее
+                                    </a>
+                                </li>
+                            </ul>
+                            <ul class="promo-tabs__list">
+                                <li class="promo-tabs__item promo-tabs__item--first active">
+                                    <div class="promo-slider">
+                                        <div class="promo-slider__wrapper">
+                                            <div class="promo-slider__slide">
+                                                <div class="promo-slider__pic" style="background: url('assets/img/content/creta-highlights.jpg')"></div>
+                                                <div class="promo-slider__content">
+                                                    <div class="promo-slider__title">Быстрее</div>
+                                                    <p class="promo-slider__text">
+                                                        Creta Boast of s strong body structure, made with Ultra high Strength Steel (UHSS) and Advanced High Strength Steel (AHSS).
+                                                    </p>
+                                                </div>
+                                            </div>
+                                            <div class="promo-slider__slide">
+                                                <div class="promo-slider__pic" style="background: url('assets/img/content/Hyundai-Motor.jpg')"></div>
+                                                <div class="promo-slider__content">
+                                                    <div class="promo-slider__title">Быстрее 2</div>
+                                                    <p class="promo-slider__text">
+                                                        Creta Boast of
+                                                    </p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li class="promo-tabs__item promo-tabs__item--second">
+                                    <div class="promo-slider">
+                                        <div class="promo-slider__wrapper">
+                                            <div class="promo-slider__slide">
+                                                <div class="promo-slider__pic" style="background: url('assets/img/content/creta-highlights-2.jpg')"></div>
+                                                <div class="promo-slider__content">
+                                                    <div class="promo-slider__title">Выше</div>
+                                                    <p class="promo-slider__text">
+                                                        Creta Boast of s strong body structure, made with Ultra high Strength Steel (UHSS) and Advanced High Strength Steel (AHSS).
+                                                    </p>
+                                                </div>
+                                            </div>
+                                            <div class="promo-slider__slide">
+                                                <div class="promo-slider__pic" style="background: url('assets/img/content/Hyundai-Motor.jpg')"></div>
+                                                <div class="promo-slider__content">
+                                                    <div class="promo-slider__title">Выше 2</div>
+                                                    <p class="promo-slider__text">
+                                                        Creta Boast of s strong body structure, made with Ultra high Strength Steel (UHSS) and Advanced High Strength Steel (AHSS).Creta Boast of s strong body structure, made with Ultra high Strength Steel (UHSS) and Advanced High Strength Steel (AHSS).
+                                                    </p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li class="promo-tabs__item promo-tabs__item--third">
+                                    <div class="promo-slider">
+                                        <div class="promo-slider__wrapper">
+                                            <div class="promo-slider__slide">
+                                                <div class="promo-slider__pic" style="background: url('assets/img/content/creta-highlights-3.jpg')"></div>
+                                                <div class="promo-slider__content">
+                                                    <div class="promo-slider__title">Сильнее</div>
+                                                    <p class="promo-slider__text">
+                                                        Creta Boast of s strong body structure, made
+                                                    </p>
+                                                </div>
+                                            </div>
+                                            <div class="promo-slider__slide">
+                                                <div class="promo-slider__pic" style="background: url('assets/img/content/Hyundai-Motor.jpg')"></div>
+                                                <div class="promo-slider__content">
+                                                    <div class="promo-slider__title">Сильнее 2</div>
+                                                    <p class="promo-slider__text">
+                                                        Creta Boast of s strong body structure, made with Ultra high Strength
+                                                    </p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+                    </section>
                 </div>
                 <!--end CONTENT-PART -->
             </main>
         </div>
-        <footer class="page-footer">
-            <div class="page-container">
-                <div class="page-footer__menu">
-                    <a href="#" class="page-footer__item">Модели</a>
-                    <a href="#" class="page-footer__item">Покупка</a>
-                    <a href="#" class="page-footer__item">Сервис и гарантия</a>
-                    <a href="#" class="page-footer__item">Программа лояльности</a>
-                    <a href="#" class="page-footer__item">Контакты</a>
-                    <a href="#" class="page-footer__item">Карта сайта</a>
+        <footer class=" page-footer ">
+            <div class="page-container ">
+                <div class="page-footer__menu ">
+                    <a href="# " class="page-footer__item ">Модели</a>
+                    <a href="# " class="page-footer__item ">Покупка</a>
+                    <a href="# " class="page-footer__item ">Сервис и гарантия</a>
+                    <a href="# " class="page-footer__item ">Программа лояльности</a>
+                    <a href="# " class="page-footer__item ">Контакты</a>
+                    <a href="# " class="page-footer__item ">Карта сайта</a>
                 </div>
-                <div class="socials">
-                    <a href="#" class="socials__item socials__item--fb"></a>
-                    <a href="#" class="socials__item socials__item--youtube"></a>
+                <div class="socials ">
+                    <a href="# " class="socials__item socials__item--fb "></a>
+                    <a href="# " class="socials__item socials__item--youtube "></a>
                 </div>
-                <a href="#" class="logo logo--footer">Хендай</a>
-                <span class="copyright">
-                        &copy;2017 Разработка сайта <a href="http://nineseven.by/" target="_blank">nineseven.by</a>
+                <a href="# " class="logo logo--footer ">Хендай</a>
+                <span class="copyright ">
+                        &copy;2017 Разработка сайта <a href="http://nineseven.by/ " target="_blank ">nineseven.by</a>
                     </span>
             </div>
         </footer>
         <!-- FOOTER-PANEL -->
-        <div class="footer-panel">
-            <a href="#" class="logo logo--footer">Хендай</a>
-            <div class="footer-panel__menu">
-                <a href="#" class="footer-panel__contact">Контакты</a>
-                <a href="#" class="footer-panel__share">Шаринг</a>
-                <a href="#" class="footer-panel__top">Подняться наверх</a>
+        <div class="footer-panel ">
+            <a href="# " class="logo logo--footer ">Хендай</a>
+            <div class="footer-panel__menu ">
+                <a href="# " class="footer-panel__contact ">Контакты</a>
+                <a href="# " class="footer-panel__share ">Шаринг</a>
+                <a href="# " class="footer-panel__top ">Подняться наверх</a>
             </div>
-            <div class="contact-panel">
-                <a href="#" class="contact-panel__link">Связаться с нами</a>
-                <a href="#" class="contact-panel__link">Посетить вашу страну</a>
+            <div class="contact-panel ">
+                <a href="# " class="contact-panel__link ">Связаться с нами</a>
+                <a href="# " class="contact-panel__link ">Посетить вашу страну</a>
             </div>
-            <div class="sharing-panel">
-                <div class="sharing-panel__title">Шаринг</div>
-                <div class="sharing-panel__socials">
-                    <a href="#" class="sharing-panel__link sharing-panel__link--fb"></a>
-                    <a href="#" class="sharing-panel__link sharing-panel__link--tw"></a>
-                    <a href="#" class="sharing-panel__link sharing-panel__link--gl"></a>
+            <div class="sharing-panel ">
+                <div class="sharing-panel__title ">Шаринг</div>
+                <div class="sharing-panel__socials ">
+                    <a href="# " class="sharing-panel__link sharing-panel__link--fb "></a>
+                    <a href="# " class="sharing-panel__link sharing-panel__link--tw "></a>
+                    <a href="# " class="sharing-panel__link sharing-panel__link--gl "></a>
                 </div>
             </div>
         </div>
         <!-- POPUP -->
-        <div class="popup popup--js">
-            <a href="#" class="popup__close"></a>
-            <div class="popup__title">
+        <div class="popup popup--js ">
+            <a href="# " class="popup__close "></a>
+            <div class="popup__title ">
                 Поделиться
             </div>
-            <div class="share-list">
-                <div class="share-list__item">
-                    <a href="#" class="share-list__link share-list__link--fb">facebook</a>
+            <div class="share-list ">
+                <div class="share-list__item ">
+                    <a href="# " class="share-list__link share-list__link--fb ">facebook</a>
                 </div>
-                <div class="share-list__item">
-                    <a href="#" class="share-list__link share-list__link--youtube">youtube</a>
+                <div class="share-list__item ">
+                    <a href="# " class="share-list__link share-list__link--youtube ">youtube</a>
                 </div>
             </div>
         </div>
         <!-- OVERLAY -->
-        <div class="overlay">
+        <div class="overlay ">
         </div>
         <!-- ARROW TOP -->
-        <a href="#" class="arrow-top"></a>
+        <a href="# " class="arrow-top "></a>
     </div>
     <!-- END LAYOUT-->
-    <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
-    <script src="js/vendor/jquery.formstyler.min.js"></script>
-    <script src="js/vendor/slick.min.js"></script>
-    <script src="js/vendor/lightgallery.min.js"></script>
-    <script src="js/vendor/lg-fullscreen.min.js"></script>
-    <script src="js/interface.js"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js " integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin=" anonymous "></script>
+    <script src="js/vendor/jquery.formstyler.min.js "></script>
+    <script src="js/vendor/slick.min.js "></script>
+    <script src="js/vendor/lightgallery.min.js "></script>
+    <script src="js/vendor/lg-fullscreen.min.js "></script>
+    <script src="js/interface.js "></script>
 </body>
 
 </html>
